# NirmatAI_WebApp

./: .gitignore  .pre-commit-config.yaml  Dockerfile.client  Dockerfile.dev  Makefile  README.md  open_webapp.sh  pyproject.toml  webapp_config.yml
.github/workflows/: static_tests.yml
.github/workflows/actions/install_dependencies/: action.yml
docs/source/: conf.py  dev.rst  index.rst
nirmatai_webapp/: streamlit_app.py
nirmatai_webapp/tests/: test_nirmatai_sdk.py
