# Project metadata
[project]
name = "nirmatai_webapp"  # Name of the project
version = "0.1.0"  # Version of the project
description = "NirmatAI Web App powered by Streamlit"  # Short description of the project
authors = [{ name = "Ilker Gul", email = "ilker.gul@certx.com" }]  # Author details
readme = "README.md"  # Path to the README file
requires-python = ">=3.12"  # Minimum required Python version

# Project classifiers for PyPI
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Framework :: Streamlit",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Web Applications",
]

# Project dependencies
dependencies = [
    "nirmatai_sdk @ git+https://github.com/CertX-SA/NirmatAI_SDK.git@main",
    "pgpt-python @ git+https://github.com/zylon-ai/pgpt-python.git@main",
    "streamlit==1.38.0",
    "pandas==2.2.2",
    "numpy==1.26.4",
    "openpyxl==3.1.4",
    "lxml==5.2.2",
]

# Project URLs
[project.urls]
Homepage = "https://github.com/ilkergul99/NirmatAI_WebApp"  # Project homepage
Issues = "https://github.com/ilkergul99/NirmatAI_WebApp/issues"  # Issue tracker

# Optional dependencies
[project.optional-dependencies]
dev = [
    "ruff==0.2.2",
    "mypy==1.8.0",
    "pytest==8.0.2",
    "pytest-cov==4.1.0",
    "pytest-asyncio==0.23.5",
    "types-pyyaml==6.0.12.12",
    "mlflow==2.13.0",
    "ansible-lint==24.7.0",
]
docs = ["sphinx==7.3.7", "sphinx-rtd-theme==2.0.0"]

# Ruff configuration
[tool.ruff]
target-version = "py312"  # Target Python version

# Selected linting rules
lint.select = [
    "E",   # pycodestyle
    "W",   # pycodestyle
    "F",   # Pyflakes
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "D",   # pydocstyle
    "I",   # isort
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "Q",   # flake8-quotes
    "UP",  # pyupgrade
    "PT",  # flake8-pytest-style
    "RUF", # Ruff-specific rules
]

# Pydocstyle configuration
[tool.ruff.lint.pydocstyle]
convention = "google"  # Documentation style convention

# Pycodestyle configuration
[tool.ruff.lint.pycodestyle]
max-doc-length = 88  # Maximum length of documentation lines

# Flake8 Tidy Imports configuration
[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"  # Ban all relative imports

# Flake8 Type Checking configuration
[tool.ruff.lint.flake8-type-checking]
strict = true
runtime-evaluated-base-classes = ["pydantic.BaseModel"]  # Classes to evaluate at runtime

# Mypy configuration
[tool.mypy]
python_version = "3.12"  # Target Python version
strict = true  # Enable strict type checking
check_untyped_defs = false  # Disable checking untyped definitions
explicit_package_bases = true  # Require explicit package bases
warn_unused_ignores = false  # Disable warnings for unused ignores
exclude = ["tests"]  # Exclude test directory
ignore_missing_imports = true  # Ignore missing imports

# Pytest configuration
[tool.pytest.ini_options]
asyncio_mode = "auto"  # Auto mode for asyncio
testpaths = ["nirmatai_webapp/tests"]  # Test paths
addopts = ["--import-mode=importlib"]  # Additional options

# Build system configuration
[build-system]
requires = ["setuptools>=61.0", "wheel"]  # Required build tools
build-backend = "setuptools.build_meta"  # Build backend
